create a directory structure

--- a/index.html
+++ b/index.html
@@ -5,44 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT 101</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #d6d6d6;
-            color: #646464;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #252525;
-            color: #cecece;
-            padding: 10px;
-            margin: 0 auto;
-            max-width: 50vw;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-        nav ul li {
-            margin: 5px 0;
-        }
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-        section {
-            padding: 20px;
-        }
-        h2 {
-            color: #cacaca;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
