--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT 101</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Dynamic Content Loader</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>IT 101</h1>
-    </header>
-    <section id="introduction" style="font-family: 'Georgia', serif; font-size: 1.2em; line-height: 1.6; color: #2c3e50; max-width: device-width; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-        <h2>About</h2>
-        <p>This website contains the basics of what you will see in a corporate IT environment. This can come in handy as an introduction for someone totally new to IT environment.</p>
-    </section>
-    <nav>
-        <h2>Contents</h2>
+    <div id="sidebar">
         <ul>
-            <li><a href="#itinfra">IT Infrastructure</a></li>
+            <li><a href="#" data-file="topic1.html">Topic 1</a></li>
+            <li><a href="#" data-file="topic2.html">Topic 2</a></li>
+            <li><a href="#" data-file="topic3.html">Topic 3</a></li>
         </ul>
-    </nav>
-    <section id="itinfra">
-        <h2>IT Infrastructure</h2>
-        <p>A typical IT Infrastructure in a corporate environment can be made up of a number of Local Area Networks.</p>
-    </section>
+    </div>
+    <div id="content">
+        <p>Select a topic from the sidebar.</p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
